add score & play button

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 </head>
 
 <body class="page__body">
+  <div class="page__score">SCORE: 0</div>
+  <button class="page__play page__play--hide" type="button">PLAY</button>
   <script src="js/phaser.min.js"></script>
   <script src="js/script.js"></script>
 </body>
