--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 </head>
 
 <body class="page__body">
-  <div class="page__score">SCORE: 0</div>
-  <button class="page__play page__play--hide" type="button">PLAY</button>
+  <div class="page__score"></div>
+  <button class="page__play button" type="button">PLAY</button>
+  <button class="page__pause page__pause--hide button" type="button">||</button>
+  <button class="page__resume page__resume--hide button" type="button">&#9658;</button>
   <script src="js/phaser.min.js"></script>
   <script src="js/script.js"></script>
 </body>
