--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <title>Runner</title>
+  <link rel="preload" href="fonts/Pixel.woff2" as="font" type="font/woff2" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
@@ -14,8 +15,8 @@
 <body class="page__body">
   <div class="page__score"></div>
   <button class="page__play button" type="button">PLAY</button>
-  <button class="page__pause page__pause--hide button" type="button"></button>
-  <button class="page__resume page__resume--hide button" type="button"></button>
+  <button class="page__pause page__pause--hide button" type="button"><img class="button__img" src="img/pause.png" alt="pause"></button>
+  <button class="page__resume page__resume--hide button" type="button"><img class="button__img" src="img/resume.png" alt="resume"></button>
   <script src="js/phaser.min.js"></script>
   <script src="js/script.js"></script>
 </body>
